colorindo os parágrafos de vermelho

--- a/arquivo1.html
+++ b/arquivo1.html
@@ -4,6 +4,11 @@
     <title>Arquivo1</title>
 </head>
 <body>
+    <style>
+        p {
+            color: #ff0000
+        }
+    </style>
     <h1> Arquivo 1</h1>
 
     <p>Primeiro parágrafo</p>
