--- a/arquivo1.html
+++ b/arquivo1.html
@@ -8,6 +8,9 @@
         p {
             color: #ff0000
         }
+        p:first-letter {
+            color: #000000
+        }
     </style>
     <h1> Arquivo 1</h1>
 
